# frontend

./: .env.example  .env.local.example  .env.production.example  .gitignore  LICENSE  README.md  cypress.config.ts  initialize copy.sh  initialize.sh  initialize2.sh  jest.config.js  jest.setup.js  next.config.js  next.config.mjs  nginx.cid  nginx.conf  package-lock.json  package.json  quickstart.sh  settings.json  tsconfig.json  vitest.config.ts  vitestSetup.ts  wdio.conf.ts
.github/workflows/: run-tests.yml  runTests.yml
.soroban/: ledger.json  liquidity_pool  token_id_1  token_id_2  token_wasm_hash
__mocks__/: fileMock.js
__tests__/: swap.test.tsx  testTemplate.tsx
__tests__/Layout/: Header.test.tsx
__tests__/__mocks__/: handlers.ts
__tests__/pages/: balance.test.tsx  swap.test.tsx
contracts/: Cargo.toml  Makefile
contracts/liquidity_pool/src/: lib.rs
contracts/sources_and_licences/: README.md
contracts/uniswap/: UniswapV2Pair.sol
cypress/component/: app.test.tsx  liquidity.test.tsx  swap.test.tsx
cypress/e2e/: api.test.ts  connectWallet.test.ts  flows.test.ts  homepage_spec.test.ts  navigation.test.ts
cypress/support/: commands.ts
cypress/utils/: router.tsx  (+1 more)
docker/: run.sh
front-end/: README.md  next.config.js  package.json
pages/: _app.tsx  add.tsx  all.tsx  balance.test.tsx  balance.tsx  index.tsx  liquidity.tsx  mint.tsx  swap.test.tsx  swap.tsx  test-swk.tsx
patches/: @creit.tech+stellar-wallets-kit+1.7.3.patch
public/: native_tokens.json
src/: constants.tsx  currencies.tsx  issueAssets.js  utils.tsx
styles/: globals.css
(+420 files in other folders)
