[workspace]
resolver = "2"

members = [
    "liquidity_pool",
    "token"
]

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[workspace.dependencies.soroban-sdk]
version = "0.4.2"
git = "https://github.com/stellar/rs-soroban-sdk"
rev = "e1c3de33942f0e997680645941787102ebf61e85"

[workspace.dependencies.soroban-auth]
version = "0.4.2"
git = "https://github.com/stellar/rs-soroban-sdk"
rev = "e1c3de33942f0e997680645941787102ebf61e85"
